fix: scrollbars caused by overflow overlay deprecation

--- a/src/styles/components/_overwrite-material.scss
+++ b/src/styles/components/_overwrite-material.scss
@@ -1,6 +1,6 @@
 // DIALOGS
 body .mat-dialog-content {
-  @include scroll;
+  overflow: auto;
 }
 
 .big {
