--- a/src/styles/components/markdown.scss
+++ b/src/styles/components/markdown.scss
@@ -50,7 +50,6 @@
   pre {
     max-width: 100%;
     overflow-x: auto;
-    overflow-x: overlay;
     // we need this, otherwise it might break inside tables
     white-space: pre-wrap;
 
